--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
