--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
@@ -18,7 +19,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.3.9"
+    "zustand": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
